# invidious-rs

./: Cargo.toml
src/: lib.rs
src/default_impl/: mod.rs
src/endpoints/: channels.rs  comments.rs  error.rs  mod.rs  playlists.rs  search.rs  stats.rs  suggestions.rs  videos.rs
src/endpoints_impl/: impl_reqwest.rs  impl_template.rs  mod.rs  reqwest_impl_test.rs
src/reqwest_impl/: mod.rs
src/tests/: mod.rs  reqwest_impl.rs  synchronize_type.rs
src/tests/responses-sample/: channel-info.json  instance-stats.json  playlist-info.json  search-all.json  update-samples.sh  video-info.json
src/types/: api_info.rs  attachments.rs  channel.rs  common.rs  mod.rs  params.rs  playlists.rs  region.rs  video.rs
src/utils/: mod.rs
src/web_client/: get.rs
