[package]
name = "invidious-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
url = { version = "2.5" }
async-trait = { version = "0.1" }
derive_builder = { version = "*" }
ordered-float = { version = "4.0", default-features = false, features = ["serde"]}
reqwest = { version = "*", features = ["json"], optional = true }

[features]
reqwest = ["dep:reqwest"]
default = ["reqwest"]
